--- a/snake-game/scss/main.scss
+++ b/snake-game/scss/main.scss
@@ -8,6 +8,28 @@ body {
   justify-content: center;
   padding-top: 20px;
 }
+.game-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 30px;
+}
+.score {
+  display: flex;
+  width: 160px;
+  height: 50px;
+  background-color: #161618;
+  justify-content: center;
+  align-items: center;
+
+  & .score-numbers {
+    font-size: 24px;
+    font-weight: 700;
+    line-height: calc(28 / 24 * 100%);
+    color: #fa0556;
+  }
+}
 .game-board {
   position: relative;
   display: grid;
@@ -19,6 +41,7 @@ body {
   width: 400px;
   height: 400px;
   overflow: hidden;
+  margin-top: 20px;
   // border: 3px solid #525053;
 }
 .circle {
