--- a/snake-game/scss/main.scss
+++ b/snake-game/scss/main.scss
@@ -15,7 +15,7 @@ body {
   justify-content: center;
   margin-top: 30px;
 }
-.score {
+.game-score {
   display: flex;
   width: 160px;
   height: 50px;
