--- a/style.css
+++ b/style.css
@@ -32,12 +32,12 @@ body {
   padding-bottom: 1rem;
 }
 
-.total {
+.second-number {
   padding-bottom: 2rem;
   font-size: 1.2rem;
 }
 
-.total-preview {
+.first-number {
   font-size: 2rem;
 }
 
@@ -61,6 +61,7 @@ body {
   cursor: pointer;
   width: 100%;
   height: 100%;
+  user-select: none;
 }
 
 .keyboard > div:hover {
