--- a/password-generator/style.css
+++ b/password-generator/style.css
@@ -39,8 +39,42 @@ body {
 }
 
 .password {
-  font-size: 1.7rem;
+  position: relative;
+  font-size: 1.3rem;
+  height: 1.5rem;
+  width: 100%;
+  cursor: pointer;
 }
+
+.tooltip-pass {
+  visibility: hidden;
+  background-color: rgb(12, 12, 12, 0.6);
+  color: #fff;
+  border-radius: 0.2rem;
+  padding: 0.2rem;
+  position: absolute;
+  z-index: 1;
+  left: -3.3rem;
+  
+}
+
+.tooltip-pass::before {
+  content: '';
+  border: 0.5rem solid transparent;
+  border-right: 0;
+  border-left: 1rem solid rgb(12, 12, 12, 0.6);
+  margin-left: 3.1rem;
+  top: 0.3rem;
+  position: absolute;
+  z-index: -1;
+  
+}
+
+.tooltip--active {
+  visibility: visible;
+  
+}
+
 
 .copy {
   position: absolute;
@@ -101,6 +135,7 @@ body {
 }
 
 .pass-length__container {
+  position: relative;
   display: flex;
   gap: 1rem;
   padding-top: 1rem;
@@ -108,22 +143,44 @@ body {
 }
 
 .length-number {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border: 0.1rem solid rgb(167, 165, 165);
   padding: 0.7rem 1.2rem 0.7rem 1.2rem;
   border-radius: 0.6rem;
+  width: 3rem;
+}
 
+.range__slider {
+  position: relative;
+  align-items: center;
+  width: 100%;
+}
+
+.range {
+  position: absolute;
+  align-items: center;
+  top: 35%;
+  width: 50%;
+  height: 0.5rem;
+  background-color: green;
+  border-radius: 1rem;
+  /* padding-left: 10rem; */
+  z-index: 2;
 }
 
 input[type="range"] {
   -webkit-appearance: none;
   width: 100%;
-  background-color: green;
+  background-color: rgb(161, 161, 161);
   height: 0.5rem;
   border-radius: 1rem;
-
+  z-index: 1;
 }
 
 input[type="range"]::-webkit-slider-thumb {
+  position: relative;
   -webkit-appearance: none;
   appearance: none;
   cursor: pointer;
@@ -131,6 +188,7 @@ input[type="range"]::-webkit-slider-thumb {
   height: 1.7rem;
   width: 1.7rem;
   border-radius: 1rem;
+  z-index: 10;
 }
 
 .settings__additional {
