--- a/weather-app/style.css
+++ b/weather-app/style.css
@@ -3,11 +3,27 @@
   padding: 0;
 }
 
+body {
+  background: url('') no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+/* body {
+  min-height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-image: url('https://images.unsplash.com/photo-1508750890367-ae51d0ef8cb4?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMzg3OTh8MHwxfHNlYXJjaHwxMXx8QmVybGlufGVufDB8fHx8MTY1NTU0NTgzNQ&ixlib=rb-1.2.1&q=80');
+} */
+
 .container {
   min-width: 250px;
   min-height: 250px;
-  width: 50vh;
-  height: 40vh;
+  width: 25%;
+  height: 40%;
   background-color: hsla(100,10%,10%, 0.9);
   margin: 0 auto;
   margin-top: 10%;
@@ -44,7 +60,6 @@
   background-position: center center;
   background-color:hsla(0, 0%, 40%, 0.4);
   border-radius: 50%;
-  /* filter: invert(99%) sepia(65%) saturate(400%) hue-rotate(48deg) brightness(124%) contrast(95%); */
   cursor: pointer;
 }
 
@@ -58,13 +73,23 @@
   padding-top: 0.6rem;
 }
 
-.additional {
+.weather-info {
   display: flex;
   flex-direction: column;
-  padding-top: 1rem;
 }
 
-.additional > div {
-  padding-top: 0.3rem;
+.weather-info > div {
+  /* padding-top: 0.3rem; */
   font-size: 1.1rem;
+  line-height: 1.4rem;
+}
+
+.weather-info__weather {
+  display: flex;
+  flex-direction: column;
+}
+
+.weather-info__icon {
+  width: 80px;
+  height: 80px;
 }
