--- a/password-generator/style.css
+++ b/password-generator/style.css
@@ -60,7 +60,6 @@ body {
   position: absolute;
   z-index: 1;
   left: -3.3rem;
-  
 }
 
 .tooltip-pass::before {
@@ -72,14 +71,11 @@ body {
   top: 0.3rem;
   position: absolute;
   z-index: -1;
-  
 }
 
 .tooltip--active {
   visibility: visible;
-  
 }
-
 
 .copy {
   position: absolute;
@@ -104,7 +100,7 @@ body {
   cursor: pointer;
 }
 
-.generate:hover { 
+.generate:hover {
   transform: rotate(360deg) scale(1.5);
   transition: 0.5s;
 }
@@ -175,7 +171,7 @@ body {
   z-index: 2;
 }
 
-input[type="range"] {
+input[type='range'] {
   -webkit-appearance: none;
   width: 100%;
   background-color: rgb(161, 161, 161);
@@ -184,7 +180,7 @@ input[type="range"] {
   z-index: 1;
 }
 
-input[type="range"]::-webkit-slider-thumb {
+input[type='range']::-webkit-slider-thumb {
   position: relative;
   -webkit-appearance: none;
   appearance: none;
@@ -206,6 +202,7 @@ label {
   display: flex;
   align-items: center;
   position: relative;
+  cursor: pointer;
 }
 
 label::before {
@@ -233,7 +230,7 @@ input[type='checkbox'] {
   opacity: 0;
 }
 
-input[type='checkbox']:checked + label::after { 
+input[type='checkbox']:checked + label::after {
   transform: translate(1rem);
   background-color: rgb(33, 163, 33);
 }
